--- a/scss/layout/_split.scss
+++ b/scss/layout/_split.scss
@@ -57,14 +57,14 @@
     }
 
     &__content {
-        padding: 3rem 1.5rem;
+        padding: 3rem 1.5rem 4rem;
 
         @include breakpoint(xs) {
-            padding: 2rem 5rem;
+            padding: 3rem 5rem 4rem;
         }
 
         @include breakpoint(md) {
-            padding: 2rem 3rem;
+            padding: 2rem 3rem 3rem;
             display: flex;
             flex-flow: column nowrap;
             justify-content: center;
@@ -72,6 +72,10 @@
 
         @include breakpoint(lg) {
             padding: 2rem 6rem;
+        }
+
+        @include breakpointPortrait(xs) {
+            padding: 4rem 3rem 6rem;
         }
     }
 
